<resources>
    <string name="app_name">DoAn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nhom 11</string>
    <string name="nav_header_subtitle">nhom11@st.huflit.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chapter_number">Chapter Number</string>
    <string name="Gmail">Gmail</string>
    <string name="Password">Enter the password</string>
    <string name="Confirmpassword">Confirm password</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="Register">Đăng ký</string>
    <string name="Login">Đăng Nhập</string>

</resources>