<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".User.RegisterActivity"
    android:background="@drawable/background_register">

    <TextView
        android:textColor="@color/Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/lnKhungDangKy"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size10dp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_marginEnd="@dimen/size10dp"
        android:layout_marginBottom="@dimen/size10dp"
        android:padding="@dimen/size10dp"
        android:text="@string/Register"
        android:textSize="@dimen/size30dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnKhungDangKy"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <EditText
            android:id="@+id/edtGmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size50dp"
            android:background="@drawable/custom_edt"
            android:hint="@string/Gmail"
            android:textColorHint="@color/lighGray"
            android:textStyle="bold"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/ic_gmail"
            android:drawablePadding="@dimen/size10dp"
            />
        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size50dp"
            android:background="@drawable/custom_edt"
            android:hint="@string/Password"
            android:textColorHint="@color/lighGray"
            android:textStyle="bold"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/size10dp"
            android:password="true"
            />
        <EditText
            android:id="@+id/edtRePass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size50dp"
            android:background="@drawable/custom_edt"
            android:hint="@string/Confirmpassword"
            android:textColorHint="@color/lighGray"
            android:textStyle="bold"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/size10dp"
            android:password="true"

            />
        <EditText
            android:id="@+id/edtusername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size50dp"
            android:background="@drawable/custom_edt"
            android:hint="@string/tendangnhap"
            android:textColorHint="@color/lighGray"
            android:textStyle="bold"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="@dimen/size10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                style="@style/Button.AppCompat"
            android:padding="@dimen/size10dp"
            android:text="@string/dongy" />

            <Button
                android:id="@+id/btnThoat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                style="@style/Button.AppCompat"
            />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>