<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/backgroundinfo1"
    tools:context=".User.LoginActivity">
    <TextView
        android:textColor="@color/Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/lnDangNhap"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size10dp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_marginEnd="@dimen/size10dp"
        android:layout_marginBottom="@dimen/size10dp"
        android:padding="@dimen/size10dp"
        android:text="@string/Login"
        android:textSize="@dimen/size30dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnDangNhap"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
    <EditText
        android:id="@+id/edtGmail1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50dp"
        android:background="@drawable/custom_edt"
        android:hint="@string/Gmail"
        android:textColorHint="@color/lighGray"
        android:textStyle="bold"
        android:padding="@dimen/size10dp"
        android:layout_margin="@dimen/size10dp"
        android:drawableLeft="@drawable/ic_gmail"
        android:drawablePadding="@dimen/size10dp"
        />
    <EditText
        android:id="@+id/edtPass1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50dp"
        android:background="@drawable/custom_edt"
        android:hint="@string/Password"
        android:textColorHint="@color/lighGray"
        android:textStyle="bold"
        android:padding="@dimen/size10dp"
        android:layout_margin="@dimen/size10dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/size10dp"
        android:password="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:layout_marginStart="@dimen/size10dp"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginEnd="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:backgroundTint="@null"
            android:padding="@dimen/size10dp"
            android:text="@string/Login" />

        <Button
            android:id="@+id/btnResgister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:layout_marginStart="@dimen/size10dp"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginEnd="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:backgroundTint="@null"
            android:padding="@dimen/size10dp"
            android:text="@string/Register" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>